--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -26,7 +26,39 @@
         </div>
 
         <div class="row">
-            <div class="col-12 col-lg-7"></div>
+            <div class="col-12 col-lg-7">
+                <div class="order-confirmation-wrapper p-2 border">
+                    <div class="row">
+                        <div class="col">
+                            <small class="text-muted">
+                                Order Info:
+                            </small>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <small class="text-muted">
+                                Order Details:
+                            </small>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <small class="text-muted">
+                                Delivering Address:
+                            </small>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <small class="text-dark">
+                                Billing Information:
+                            </small>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
         </div>
         <div class="row">
 			<div class="col-12 col-lg-7 text-right">
