--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -30,7 +30,7 @@
                 <div class="order-confirmation-wrapper p-2 border">
                     <div class="row">
                         <div class="col">
-                            <small class="text-muted">
+                            <small class="text-info">
                                 Order Info:
                             </small>
                         </div>
@@ -56,7 +56,7 @@
 
                     <div class="row">
                         <div class="col">
-                            <small class="text-muted">
+                            <small class="text-info">
                                 Order Details:
                             </small>
                         </div>
@@ -77,7 +77,7 @@
 
                     <div class="row">
                         <div class="col">
-                            <small class="text-muted">
+                            <small class="text-info">
                                 Delivering Address:
                             </small>
                         </div>
@@ -163,7 +163,7 @@
 
                     <div class="row">
                         <div class="col">
-                            <small class="text-dark">
+                            <small class="text-info">
                                 Billing Information:
                             </small>
                         </div>
@@ -171,7 +171,7 @@
 
                     <div class="row">
                         <div class="col-12 col-md-4">
-                            <p class="mb-0 text-black font-weight-bold">Order Total</p>
+                            <p class="mb-0 text-dark font-weight-bold">Order Total</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
                             <p class="mb-0">{{ order.order_total }}</p>
@@ -189,7 +189,7 @@
 
                     <div class="row">
                         <div class="col-12 col-md-4">
-                            <p class="mb-0 text-black font-weight-bold">Total Amount</p>
+                            <p class="mb-0 text-danger font-weight-bold">Total Amount</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
                             <p class="mb-0">{{ order.grand_total }}</p>
