--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,14 +14,19 @@
     <div class="row h-100">
         <div class="col-7 col-md-6 my-auto">
             <h1 class="display-4 logo-font text-white">
-                The ultimate, smooth, and irritation-free shaving experience
+                The ultimate, smooth, and irritation-free shaving experience
             </h1>
             <div class="my-5">
                 <h4>
                     <a href="{% url 'products' %}" class="shop-now-button btn btn-light btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
                 </h4>
+                <h5>
+                <a href="{% url 'contact_us' %}" class="shop-now-button btn btn-light btn-lg rounded-0 text-uppercase py-3">Contact Us</a>
+                </h5>
             </div>
         </div>
     </div>
 </div>
+
+
 {% endblock %}
