--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,23 +10,22 @@
 {% endblock %}
 
 {% block content %}
-<div class="container h-100">
-    <div class="row h-100">
-        <div class="col-7 col-md-6 my-auto">
-            <h1 class="display-4 logo-font text-white">
-                The ultimate, smooth, and irritation-free shaving experience
-            </h1>
-            <div class="my-5">
-                <h4>
-                    <a href="{% url 'products' %}" class="shop-now-button btn btn-light btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
-                </h4>
-                <h5>
-                <a href="{% url 'contact_us' %}" class="shop-now-button btn btn-light btn-lg rounded-0 text-uppercase py-3">Contact Us</a>
-                </h5>
-            </div>
+<section class="hero">
+    <div class="container">
+        <div class="row flex-wrap-reverse align-items-center">
+            <div class="col-12 col-md-6 mb-3 p-3 d-flex flex-column align-items-center justify-content-center text-white text-center hero-text">
+                <p>Welcome! <br> Start your hassle-free, easy,
+                    everyday shaving journey for the ultimate smooth and irritation-free shaving experience now!</p>
+                    <h4>
+                        <a href="{% url 'products' %}" class="shop-now-button btn btn-light btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                    </h4>
+                    <h5>
+                        <a href="{% url 'contact_us' %}" class="shop-now-button btn btn-light btn-lg rounded-0 text-uppercase py-3">Contact Us</a>
+                    </h5>
+                </div>
         </div>
     </div>
-</div>
+</section>
 
 
 {% endblock %}
