--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,13 +3,28 @@ html {
 }
 
 body {
-    background: url('/media/shaving-tools-brush-foam-homepage.webp') no-repeat center center fixed;
-    background-size: cover;
-    height: calc(100vh - 164px);
-    color: #555;
+    background: #fcf9f8;
+    color: #323232;
     font-family: 'Inter', sans-serif;
 }
-    
+
+.hero {
+    display: flex;
+    align-items: center;
+    min-height: calc(100vh - 120px);
+    width: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.583), rgba(0, 0, 0, 0.323)), url('/media/shaving-tools-brush-foam-homepage.webp') no-repeat center center;
+    background-size: cover;
+}
+
+.hero-text {
+    font-family: 'Calistoga', cursive;
+}
+
+.hero p {
+    padding: 0 1rem;
+}
+
 
     * from Bulma */
 .icon {
@@ -77,9 +92,13 @@ body {
     border: 1px solid black !important;
 }
 
+.navbar {
+    padding: 2px;
+}
+
 /* Delivery banner fix: white text on black bg */
 .bg-black {
-    background:rgb(118, 76, 34) !important;
+    background:#622e0e !important;
 }
 
 .overlay {
@@ -255,17 +274,18 @@ input[name='q']::placeholder {
         right: 0;
         left: 0;
         z-index: 1030;
+
     }
 
     .header-container {
-        padding-top: 164px;
+        padding-top: 210px;
     }
 }
 
 /* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
     .header-container {
-        padding-top: 146px;
+        padding-top: 100px;
     }
 
     body {
