--- a/templates/base.html
+++ b/templates/base.html
@@ -54,10 +54,10 @@
 
 <body>
   <header class="container-fluid fixed-top">
-    <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+    <div id="topnav" class="row bg-white d-none d-lg-flex">
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
-          <h2 class="logo-font text-black my-0"><strong class="text-navy">Shavers</strong>Haven</h2>
+          <img src="media/site-logo-med.png" alt="Brand-logo for bigger screen" class="img-fluid d-none d-md-block">
         </a>
       </div>
       <!-- FORM -->
@@ -163,6 +163,10 @@
   {% block content %}
   
   {% endblock %}
+
+<!-- Footer  -->
+  {% include 'includes/footer.html' %}
+
   {% block postloadjs %}
   <script type="text/javascript">
     $('.toast').toast('show');
