--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,6 +9,8 @@
     </div>
 {% endblock %}
 
+{% block extra_title %}| Home{% endblock %}
+
 {% block content %}
 <section class="hero">
     <div class="container">
