--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -93,13 +93,13 @@
                             This input ensures that after adding items to the shopping bag,
                              users are seamlessly redirected back to their initial location. -->
                         <div class="col-12">
-                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 ">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
-                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                            <input type="submit" class="btn btn-black rounded-0 text-uppercase " value="Add to Bag">
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
@@ -107,6 +107,71 @@
             </div>
         </div>
     </div>
+    <!-- Review section -->
+    <section>
+        <div class="container mb-5">
+            <h3 class="pt-2 text-center">
+                <span class="text-navy">Reviews for this product:</span> 
+            </h3>
+            {% for review in review %}
+            <div class="col-12 mt-3">
+                <div class="row mt-3">
+                    <div class="card w-100 text-center">
+                        <div class="review-card card-body bg-light">
+                            <h4 class="mb-2">{{ review.name }}</h4>
+                            <p class="card-text">{{ review.review }}</p>
+                            <p class="text-right"><cite class="text-black text-muted p-0">Posted by <strong>{{ review.user }}</strong> on
+                                        {{ review.created_on}}</cite></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Update and Delete Review buttons -->
+            {% if user == review.user or user.is_superuser %}
+            <div class="mb-3 text-center">
+                <a href="#" class="btn btn-danger my-2 ml-2">Delete</a>
+            </div>
+            {% endif %}
+            {% empty %}
+            <h5 class="font-weight-bold text-black mb-2 mt-3 text-center">No reviews yet! Log in to add yours.</h5>
+            {% endfor %}
+        </div>   
+        {% if user.is_authenticated %}
+        <div id="accordion" class="w-75 mb-4 review-section mx-auto border border-4 rounded border-warning">
+            <div class="card">
+                <div class="card-header" id="headingOne">
+                    <h3 class="text-center">
+                        <button class="btn collapsed" data-toggle="collapse" data-target="#collapseOne"
+                            aria-expanded="false" aria-controls="collapseOne">
+                            <span class="text-navy">Leave a review</span>&nbsp;
+                            <iconify-icon icon="icon-park:add" width="24"></iconify-icon>
+                        </button>
+                    </h3>
+                </div>
+
+                <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div class="card-body bg-light text-center">
+                        <form action="{% url 'add_review' product.id %}" method="POST" class="review-form">
+                            {% csrf_token %}
+                            <div>
+                                Name:
+                                <input type="text" class="form-control text-navy" name="name">
+                                <br>
+                                Text:
+                                <textarea name="review" rows="7" class="form-control text-navy"></textarea>
+                                <br>
+                                <input type="submit" value="Submit" class="btn btn-dark rounded-3">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% else %}
+        <p class="text-center">Please <a class="link-normal" href="{% url 'account_signup' %}">Register</a> or 
+            <a class="link-normal" href="{% url 'account_login' %}">Login</a> to leave a review.</p>
+        {% endif %}
+    </section>
 </div>
 {% endblock %}
 
